--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     position: relative;
     width: 100%;
     height: 100%;
-    background: url('https://wallpapercave.com/wp/wp2757874.jpg') center/cover no-repeat;
+    /* fixed background shorthand */
+    background: url('https://wallpapercave.com/wp/wp2757874.jpg') no-repeat center center / cover;
   }
   .icon {
     width: 80px;
@@ -27,6 +28,9 @@
     top: 20px;
     left: 20px;
     cursor: pointer;
+    background: rgba(0,0,0,0.3);
+    border-radius: 4px;
+    padding: 4px;
   }
   .icon img {
     width: 64px;
