--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Mac-Style Web Desktop (Dark)</title>
+  <title>🐧 Phillips OS </title>
   <!-- JS-DOS v6 -->
   <script src="https://js-dos.com/6.22.1/js-dos.js" crossorigin="anonymous"></script>
   <style>
