--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🐧 Phillips OS </title>
+  <title>Phillips OS </title>
+  <link rel="icon" type="images/x-icon" href="https://cdn-icons-png.flaticon.com/128/6652/6652113.png" />
   <!-- JS-DOS v6 -->
   <script src="https://js-dos.com/6.22.1/js-dos.js" crossorigin="anonymous"></script>
   <style>
